@@ -48,6 +48,7 @@ import org.springframework.stereotype.Repository;
 import org.springframework.web.multipart.MultipartFile;
 
 import jakarta.annotation.PostConstruct;
+
 import javax.crypto.NoSuchPaddingException;
 import java.io.IOException;
 import java.io.InputStream;
@@ -64,117 +65,243 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-
+/**
+ * 用于操作 Authing 用户数据的数据访问对象.
+ */
 @Repository
 public class AuthingUserDao {
-    private static final Logger logger =  LoggerFactory.getLogger(AuthingUserDao.class);
-    
+
+    /**
+     * 日志记录器实例，用于记录 AuthingUserDao 类的日志信息.
+     */
+    private static final Logger LOGGER = LoggerFactory.getLogger(AuthingUserDao.class);
+
+    /**
+     * Authing 用户池 ID.
+     */
     @Value("${authing.userPoolId}")
-    String userPoolId;
+    private String userPoolId;
 
+    /**
+     * Authing 密钥.
+     */
     @Value("${authing.secret}")
-    String secret;
+    private String secret;
 
+    /**
+     * DataStat 图像 AK.
+     */
     @Value("${datastat.img.ak}")
-    String datastatImgAk;
+    private String datastatImgAk;
 
+    /**
+     * DataStat 图像 SK.
+     */
     @Value("${datastat.img.sk}")
-    String datastatImgSk;
+    private String datastatImgSk;
 
+    /**
+     * DataStat 图像端点.
+     */
     @Value("${datastat.img.endpoint}")
-    String datastatImgEndpoint;
+    private String datastatImgEndpoint;
 
+    /**
+     * DataStat 图像存储桶名称.
+     */
     @Value("${datastat.img.bucket.name}")
-    String datastatImgBucket;
+    private String datastatImgBucket;
 
+
+    /**
+     * GitHub 社交登录的外部身份提供者 ID.
+     */
     @Value("${social.extIdpId.github}")
-    String socialExtIdpIdGithub;
+    private String socialExtIdpIdGithub;
 
+    /**
+     * GitHub 社交登录的标识符.
+     */
     @Value("${social.identifier.github}")
-    String socialIdentifierGithub;
+    private String socialIdentifierGithub;
 
+    /**
+     * GitHub 社交登录的授权 URL.
+     */
     @Value("${social.authorizationUrl.github}")
-    String socialAuthUrlGithub;
+    private String socialAuthUrlGithub;
 
+    /**
+     * Gitee 企业登录的外部身份提供者 ID.
+     */
     @Value("${enterprise.extIdpId.gitee}")
-    String enterExtIdpIdGitee;
+    private String enterExtIdpIdGitee;
 
+    /**
+     * Gitee 企业登录的标识符.
+     */
     @Value("${enterprise.identifier.gitee}")
-    String enterIdentifieGitee;
+    private String enterIdentifieGitee;
 
+    /**
+     * Gitee 企业登录的授权 URL.
+     */
     @Value("${enterprise.authorizationUrl.gitee}")
-    String enterAuthUrlGitee;
+    private String enterAuthUrlGitee;
 
+    /**
+     * OpenAtom 企业登录的外部身份提供者 ID.
+     */
     @Value("${enterprise.extIdpId.openatom}")
-    String enterExtIdpIdOpenatom;
+    private String enterExtIdpIdOpenatom;
 
+    /**
+     * OpenAtom 企业登录的标识符.
+     */
     @Value("${enterprise.identifier.openatom}")
-    String enterIdentifieOpenatom;
+    private String enterIdentifieOpenatom;
 
+
+    /**
+     * OpenAtom 企业登录的授权 URL.
+     */
     @Value("${enterprise.authorizationUrl.openatom}")
-    String enterAuthUrlOpenatom;
+    private String enterAuthUrlOpenatom;
 
+    /**
+     * Authing 的 RSA 私钥.
+     */
     @Value("${rsa.authing.privateKey}")
-    String rsaAuthingPrivateKey;
+    private String rsaAuthingPrivateKey;
 
+    /**
+     * 预留的用户名.
+     */
     @Value("${username.reserved}")
-    String usernameReserved;
+    private String usernameReserved;
 
+    /**
+     * DataStat 默认照片路径.
+     */
     @Value("${datastat.img.default.photo}")
-    String defaultPhoto;
+    private String defaultPhoto;
 
+    /**
+     * 照片后缀.
+     */
     @Value("${datastat.img.photo.suffix}")
-    String photoSuffix;
+    private String photoSuffix;
 
+    /**
+     * Authing API 主机地址.
+     */
     @Value("${authing.api.host}")
-    String authingApiHost;
+    private String authingApiHost;
 
+    /**
+     * Authing API v2 主机地址.
+     */
     @Value("${authing.api.hostv2}")
-    String authingApiHostV2;
+    private String authingApiHostV2;
 
+    /**
+     * Authing API v3 主机地址.
+     */
     @Value("${authing.api.hostv3}")
-    String authingApiHostV3;
+    private String authingApiHostV3;
 
+    /**
+     * AIGC 隐私版本号.
+     */
     @Value("${aigc.privacy.version}")
-    String aigcPrivacyVersion;
+    private String aigcPrivacyVersion;
 
+    /**
+     * OneID 隐私版本号.
+     */
     @Value("${oneid.privacy.version}")
-    String oneidPrivacyVersion;
+    private String oneidPrivacyVersion;
 
+    /**
+     * 应用程序版本号.
+     */
     @Value("${app.version:1.0}")
-    String appVersion;
+    private String appVersion;
 
+    /**
+     * 社区名称.
+     */
     @Value("${community}")
-    String community;
+    private String community;
 
     // -- temporary (解决gitee多身份源解绑问题) -- TODO
+    /**
+     * 临时外部身份提供者 IDs.
+     */
     @Value("${temp.extIdpIds}")
-    String extIdpIds;
+    private String extIdpIds;
+
+    /**
+     * 临时标识符列表.
+     */
     @Value("${temp.identifiers}")
-    String identifiers;
+    private String identifiers;
+
+    /**
+     * 临时用户列表.
+     */
     @Value("${temp.users}")
-    String users;
+    private String users;
     // -- temporary -- TODO
 
-    public static ManagementClient managementClient;
+    /**
+     * Authing 用户管理客户端实例.
+     */
+    private static ManagementClient managementClient;
 
-    public static ObsClient obsClient;
+    /**
+     * OBS 客户端实例.
+     */
+    private static ObsClient obsClient;
 
+    /**
+     * 预留用户名列表.
+     */
     private static List<String> reservedUsernames;
 
+    /**
+     * 照片后缀列表.
+     */
     private List<String> photoSuffixes;
 
+    /**
+     * 允许的社区列表.
+     */
     private List<String> allowedCommunity;
 
+
+    /**
+     * Redis 数据访问对象.
+     */
     @Autowired
     private RedisDao redisDao;
 
+    /**
+     * Spring 环境对象.
+     */
     @Autowired
     private Environment env;
 
+    /**
+     * Authing 应用程序同步对象.
+     */
     @Autowired
     private AuthingAppSync authingAppSync;
 
+
+    /**
+     * 在类实例化后立即执行的初始化方法.
+     */
     @PostConstruct
     public void init() {
         managementClient = new ManagementClient(userPoolId, secret);
@@ -186,12 +313,21 @@ public class AuthingUserDao {
         allowedCommunity = Arrays.asList("openeuler", "mindspore", "modelfoundry");
     }
 
+    /**
+     * 发送手机验证码.
+     *
+     * @param appId   应用程序 ID
+     * @param account 账号信息
+     * @param channel 渠道信息
+     * @return 返回发送结果信息
+     */
     public String sendPhoneCodeV3(String appId, String account, String channel) {
         String msg = "success";
         try {
             String phoneCountryCode = getPhoneCountryCode(account);
             account = getPurePhone(account);
-            String body = String.format("{\"phoneNumber\": \"%s\",\"channel\": \"%s\",\"phoneCountryCode\": \"%s\"}", account, channel.toUpperCase(), phoneCountryCode);
+            String body = String.format("{\"phoneNumber\": \"%s\",\"channel\": \"%s\",\"phoneCountryCode\": \"%s\"}",
+                    account, channel.toUpperCase(), phoneCountryCode);
             HttpResponse<JsonNode> response = Unirest.post(authingApiHostV3 + "/send-sms")
                     .header("x-authing-app-id", appId)
                     .header("Content-Type", "application/json")
@@ -200,15 +336,25 @@ public class AuthingUserDao {
 
             JSONObject resObj = response.getBody().getObject();
             int statusCode = resObj.getInt("statusCode");
-            if (statusCode != 200) msg = resObj.getString("message");
+            if (statusCode != 200) {
+                msg = resObj.getString("message");
+            }
 
             return msg;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return MessageCodeConfig.E0008.getMsgZh();
         }
     }
 
+    /**
+     * 发送电子邮件验证码.
+     *
+     * @param appId   应用程序 ID
+     * @param account 账号信息
+     * @param channel 渠道信息
+     * @return 返回发送结果信息
+     */
     public String sendEmailCodeV3(String appId, String account, String channel) {
         String msg = "success";
         try {
@@ -221,109 +367,201 @@ public class AuthingUserDao {
 
             JSONObject resObj = response.getBody().getObject();
             int statusCode = resObj.getInt("statusCode");
-            if (statusCode != 200) msg = resObj.getString("message");
+            if (statusCode != 200) {
+                msg = resObj.getString("message");
+            }
 
             return msg;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return MessageCodeConfig.E0008.getMsgZh();
         }
     }
 
     // 邮箱验证码注册
+
+    /**
+     * 使用电子邮件验证码注册用户.
+     *
+     * @param appId    应用程序 ID
+     * @param email    电子邮件地址
+     * @param code     邮件验证码
+     * @param username 用户名
+     * @return 返回注册结果信息
+     */
     public String registerByEmailCode(String appId, String email, String code, String username) {
-        String body = String.format("{\"connection\": \"PASSCODE\"," +
-                "\"passCodePayload\": {\"email\": \"%s\",\"passCode\": \"%s\"}," +
-                "\"profile\":{\"username\":\"%s\", \"givenName\":\"%s\"}}", email, code, username, createPrivacyVersions(oneidPrivacyVersion, true));
+        String body = String.format("{\"connection\": \"PASSCODE\","
+                        + "\"passCodePayload\": {\"email\": \"%s\",\"passCode\": \"%s\"},"
+                        + "\"profile\":{\"username\":\"%s\", \"givenName\":\"%s\"}}",
+                email, code, username, createPrivacyVersions(oneidPrivacyVersion, true));
         return register(appId, body);
     }
 
     // 手机验证码注册
+
+    /**
+     * 使用手机验证码注册用户.
+     *
+     * @param appId    应用程序 ID
+     * @param phone    手机号码
+     * @param code     手机验证码
+     * @param username 用户名
+     * @return 返回注册结果信息
+     */
     public String registerByPhoneCode(String appId, String phone, String code, String username) {
         String phoneCountryCode = getPhoneCountryCode(phone);
         phone = getPurePhone(phone);
 
-        String body = String.format("{\"connection\": \"PASSCODE\"," +
-                "\"passCodePayload\": {\"phone\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"}," +
-                "\"profile\":{\"username\":\"%s\", \"givenName\":\"%s\"}}", phone, code, phoneCountryCode, username, createPrivacyVersions(oneidPrivacyVersion, true));
+        String body = String.format("{\"connection\": \"PASSCODE\","
+                        + "\"passCodePayload\": {\"phone\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"},"
+                        + "\"profile\":{\"username\":\"%s\", \"givenName\":\"%s\"}}",
+                phone, code, phoneCountryCode, username, createPrivacyVersions(oneidPrivacyVersion, true));
         return register(appId, body);
     }
 
     // 邮箱验密码注册
+
+    /**
+     * 使用电子邮件和密码注册用户.
+     *
+     * @param appId    应用程序 ID
+     * @param email    电子邮件地址
+     * @param password 密码
+     * @param username 用户名
+     * @param code     验证码
+     * @return 返回注册结果信息
+     */
     public String registerByEmailPwd(String appId, String email, String password, String username, String code) {
-        String body = String.format("{\"connection\": \"PASSWORD\"," +
-                "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"}," +
-                "\"profile\":{\"email\":\"%s\", \"givenName\":\"%s\"}," +
-                "\"options\":{\"passwordEncryptType\":\"rsa\", \"emailPassCodeForInformationCompletion\":\"%s\"}}", 
+        String body = String.format("{\"connection\": \"PASSWORD\","
+                        + "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"},"
+                        + "\"profile\":{\"email\":\"%s\", \"givenName\":\"%s\"},"
+                        + "\"options\":{\"passwordEncryptType\":\"rsa\","
+                        + " \"emailPassCodeForInformationCompletion\":\"%s\"}}",
                 username, password, email, createPrivacyVersions(oneidPrivacyVersion, true), code);
         return register(appId, body);
     }
 
     // 手机密码注册
+
+    /**
+     * 使用手机号码和密码注册用户.
+     *
+     * @param appId    应用程序 ID
+     * @param phone    手机号码
+     * @param password 密码
+     * @param username 用户名
+     * @param code     验证码
+     * @return 返回注册结果信息
+     */
     public String registerByPhonePwd(String appId, String phone, String password, String username, String code) {
         String phoneCountryCode = getPhoneCountryCode(phone);
         phone = getPurePhone(phone);
 
-        String body = String.format("{\"connection\": \"PASSWORD\"," +
-                "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"}," +
-                "\"profile\":{\"phone\":\"%s\", \"phoneCountryCode\":\"%s\", \"givenName\":\"%s\"}," +
-                "\"options\":{\"passwordEncryptType\":\"rsa\", \"phonePassCodeForInformationCompletion\":\"%s\"}}", 
-                username, password, phone, phoneCountryCode, createPrivacyVersions(oneidPrivacyVersion, true), code);
+        String body = String.format("{\"connection\": \"PASSWORD\","
+                        + "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"},"
+                        + "\"profile\":{\"phone\":\"%s\", \"phoneCountryCode\":\"%s\", \"givenName\":\"%s\"},"
+                        + "\"options\":{\"passwordEncryptType\":\"rsa\", "
+                        + "\"phonePassCodeForInformationCompletion\":\"%s\"}}",
+                username, password, phone, phoneCountryCode,
+                createPrivacyVersions(oneidPrivacyVersion, true), code);
         return register(appId, body);
     }
 
     // 校验用户是否存在（用户名 or 邮箱 or 手机号）
+
+    /**
+     * 检查用户是否存在.
+     *
+     * @param appId       应用程序 ID
+     * @param account     账号信息
+     * @param accountType 账号类型
+     * @return 如果用户存在，则返回 true；否则返回 false
+     * @throws ServerErrorException 服务器错误异常
+     */
     public boolean isUserExists(String appId, String account, String accountType) throws ServerErrorException {
         try {
             AuthenticationClient authentication = authingAppSync.getAppClientById(appId);
-            switch (accountType.toLowerCase()) {
-                case "username":
-                    return authentication.isUserExists(account, null, null, null).execute();
-                case "email":
-                    return authentication.isUserExists(null, account, null, null).execute();
-                case "phone":
-                    return authentication.isUserExists(null, null, account, null).execute();
-                default:
-                    return true;
-            }
+            return switch (accountType.toLowerCase()) {
+                case "username" -> authentication.isUserExists(account, null, null, null).execute();
+                case "email" -> authentication.isUserExists(null, account, null, null).execute();
+                case "phone" -> authentication.isUserExists(null, null, account, null).execute();
+                default -> true;
+            };
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             throw new ServerErrorException();
         }
     }
 
+    /**
+     * 使用电子邮件验证码登录.
+     *
+     * @param app   应用程序对象
+     * @param email 电子邮件地址
+     * @param code  邮件验证码
+     * @return 返回登录结果对象
+     * @throws ServerErrorException 服务器错误异常
+     */
     public Object loginByEmailCode(Application app, String email, String code) throws ServerErrorException {
-        String body = String.format("{\"connection\": \"PASSCODE\"," +
-                "\"passCodePayload\": {\"email\": \"%s\",\"passCode\": \"%s\"}," +
-                "\"options\": {\"autoRegister\": true}," +
-                "\"client_id\":\"%s\",\"client_secret\":\"%s\"}", email, code, app.getId(), app.getSecret());
+        String body = String.format("{\"connection\": \"PASSCODE\","
+                + "\"passCodePayload\": {\"email\": \"%s\",\"passCode\": \"%s\"},"
+                + "\"options\": {\"autoRegister\": true},"
+                + "\"client_id\":\"%s\",\"client_secret\":\"%s\"}", email, code, app.getId(), app.getSecret());
         return login(app.getId(), body);
     }
 
+    /**
+     * 使用手机验证码登录.
+     *
+     * @param app   应用程序对象
+     * @param phone 手机号码
+     * @param code  手机验证码
+     * @return 返回登录结果对象
+     * @throws ServerErrorException 服务器错误异常
+     */
     public Object loginByPhoneCode(Application app, String phone, String code) throws ServerErrorException {
         String phoneCountryCode = getPhoneCountryCode(phone);
         phone = getPurePhone(phone);
 
-        String body = String.format("{\"connection\": \"PASSCODE\"," +
-                "\"passCodePayload\": {\"phone\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"}," +
-                "\"options\": {\"autoRegister\": true}," +
-                "\"client_id\":\"%s\",\"client_secret\":\"%s\"}", phone, code, phoneCountryCode, app.getId(), app.getSecret());
+        String body = String.format("{\"connection\": \"PASSCODE\","
+                        + "\"passCodePayload\": {\"phone\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"},"
+                        + "\"options\": {\"autoRegister\": true},"
+                        + "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
+                phone, code, phoneCountryCode, app.getId(), app.getSecret());
         return login(app.getId(), body);
     }
 
+    /**
+     * 使用电子邮件和密码进行登录.
+     *
+     * @param app      应用程序对象
+     * @param email    电子邮件地址
+     * @param password 密码
+     * @return 返回登录结果对象
+     * @throws ServerErrorException 服务器错误异常
+     */
     public Object loginByEmailPwd(Application app, String email, String password) throws ServerErrorException {
         if (!isUserExists(app.getId(), email, "email")) {
             return MessageCodeConfig.E00052.getMsgZh();
         }
 
-        String body = String.format("{\"connection\": \"PASSWORD\"," +
-                        "\"passwordPayload\": {\"email\": \"%s\",\"password\": \"%s\"}," +
-                        "\"options\": {\"passwordEncryptType\": \"rsa\"}," +
-                        "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
+        String body = String.format("{\"connection\": \"PASSWORD\","
+                        + "\"passwordPayload\": {\"email\": \"%s\",\"password\": \"%s\"},"
+                        + "\"options\": {\"passwordEncryptType\": \"rsa\"},"
+                        + "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
                 email, password, app.getId(), app.getSecret());
         return login(app.getId(), body);
     }
 
+    /**
+     * 使用手机号码和密码进行登录.
+     *
+     * @param app      应用程序对象
+     * @param phone    手机号码
+     * @param password 密码
+     * @return 返回登录结果对象
+     * @throws ServerErrorException 服务器错误异常
+     */
     public Object loginByPhonePwd(Application app, String phone, String password) throws ServerErrorException {
         phone = getPurePhone(phone);
 
@@ -331,43 +569,73 @@ public class AuthingUserDao {
             return MessageCodeConfig.E00052.getMsgZh();
         }
 
-        String body = String.format("{\"connection\": \"PASSWORD\"," +
-                        "\"passwordPayload\": {\"phone\": \"%s\",\"password\": \"%s\"}," +
-                        "\"options\": {\"passwordEncryptType\": \"rsa\"}," +
-                        "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
+        String body = String.format("{\"connection\": \"PASSWORD\","
+                        + "\"passwordPayload\": {\"phone\": \"%s\",\"password\": \"%s\"},"
+                        + "\"options\": {\"passwordEncryptType\": \"rsa\"},"
+                        + "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
                 phone, password, app.getId(), app.getSecret());
         return login(app.getId(), body);
     }
 
+    /**
+     * 使用用户名和密码进行登录.
+     *
+     * @param app      应用程序对象
+     * @param username 用户名
+     * @param password 密码
+     * @return 返回登录结果对象
+     * @throws ServerErrorException 服务器错误异常
+     */
     public Object loginByUsernamePwd(Application app, String username, String password) throws ServerErrorException {
         if (!isUserExists(app.getId(), username, "username")) {
             return MessageCodeConfig.E00052.getMsgZh();
         }
 
-        String body = String.format("{\"connection\": \"PASSWORD\"," +
-                        "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"}," +
-                        "\"options\": {\"passwordEncryptType\": \"rsa\"}," +
-                        "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
+        String body = String.format("{\"connection\": \"PASSWORD\","
+                        + "\"passwordPayload\": {\"username\": \"%s\",\"password\": \"%s\"},"
+                        + "\"options\": {\"passwordEncryptType\": \"rsa\"},"
+                        + "\"client_id\":\"%s\",\"client_secret\":\"%s\"}",
                 username, password, app.getId(), app.getSecret());
         return login(app.getId(), body);
     }
 
+    /**
+     * 获取应用程序注销重定向 URI 列表.
+     *
+     * @param appId 应用程序 ID
+     * @return 返回指定应用程序的注销重定向 URI 列表
+     */
     public List<String> getAppLogoutRedirectUris(String appId) {
         List<String> redirectUris = new ArrayList<>();
         Application execute = getAppById(appId);
-        if (execute != null)
+        if (execute != null) {
             redirectUris = execute.getLogoutRedirectUris();
+        }
         return redirectUris;
     }
 
+    /**
+     * 通过应用程序 ID 获取应用程序对象.
+     *
+     * @param appId 应用程序 ID
+     * @return 返回指定应用程序 ID 对应的应用程序对象，如果不存在则返回 null
+     */
     public Application getAppById(String appId) {
         Application app = authingAppSync.getAppById(appId);
         if (app == null) {
-            logger.error(String.format("Can't find app with id %s", appId));
+            LOGGER.error(String.format("Can't find app with id %s", appId));
         }
         return app;
     }
 
+    /**
+     * 通过访问令牌获取用户信息的映射.
+     *
+     * @param appId       应用程序 ID
+     * @param code        授权码
+     * @param redirectUrl 重定向 URL
+     * @return 返回包含用户信息的映射，如果无法获取则返回空映射
+     */
     public Map getUserInfoByAccessToken(String appId, String code, String redirectUrl) {
         try {
             AuthenticationClient authentication = authingAppSync.getAppClientById(appId);
@@ -375,43 +643,63 @@ public class AuthingUserDao {
             // code换access_token
             authentication.setRedirectUri(redirectUrl);
             Map res = (Map) authentication.getAccessTokenByCode(code).execute();
-            String access_token = res.get("access_token").toString();
+            String accessToken = res.get("access_token").toString();
 
             // access_token换user
-            Map user = (Map) authentication.getUserInfoByAccessToken(access_token).execute();
+            Map user = (Map) authentication.getUserInfoByAccessToken(accessToken).execute();
             user.put("id_token", res.get("id_token").toString());
             return user;
         } catch (Exception ex) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), ex);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), ex);
             return null;
         }
     }
 
+    /**
+     * 执行用户注销操作.
+     *
+     * @param appId   应用程序 ID
+     * @param idToken ID 令牌
+     * @param userId  用户 ID
+     * @return 返回注销操作是否成功的布尔值，成功为 true，失败为 false
+     */
     public boolean logout(String appId, String idToken, String userId) {
         try {
-            HttpResponse<JsonNode> response = Unirest.get(String.format(authingApiHost + "/logout?appId=%s&userId=%s", appId, userId))
+            HttpResponse<JsonNode> response = Unirest
+                    .get(String.format(authingApiHost + "/logout?appId=%s&userId=%s", appId, userId))
                     .header("Authorization", idToken)
                     .header("x-authing-userpool-id", userPoolId)
                     .asJson();
             int code = response.getBody().getObject().getInt("code");
             return code == 200;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return false;
         }
     }
 
-    // 获取用户基本信息
+    /**
+     * 根据用户ID获取用户基本信息.
+     *
+     * @param userId 用户ID
+     * @return 返回对应用户ID的用户对象，如果不存在则返回null
+     */
     public User getUser(String userId) {
         try {
             return managementClient.users().detail(userId, true, true).execute();
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return null;
         }
     }
 
-    // 使用v3管理员接口获取用户信息
+    /**
+     * 使用v3管理员接口获取用户信息.
+     *
+     * @param userId     用户 ID
+     * @param userIdType 用户 ID 类型
+     * @return 返回包含用户信息的 JSONObject 对象，如果获取失败则返回 null
+     */
     public JSONObject getUserV3(String userId, String userIdType) {
         try {
             String token = getManagementToken();
@@ -424,23 +712,39 @@ public class AuthingUserDao {
                     .asJson();
             return response.getBody().getObject().getJSONObject("data");
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return null;
         }
     }
 
+    /**
+     * 通过用户名获取用户信息.
+     *
+     * @param username 用户名
+     * @return 返回包含用户信息的 JSONObject 对象，如果未找到用户则返回 null
+     */
     public JSONObject getUserByName(String username) {
         try {
             User user = managementClient.users().find(new FindUserParam().withUsername(username)).execute();
             return getUserById(user.getId());
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return null;
         }
     }
 
-    // 获取用户基本信息
-    public Object[] getAppUserInfo(String token) throws InvalidKeySpecException, NoSuchAlgorithmException, InvalidKeyException, NoSuchPaddingException {
+    /**
+     * 通过令牌获取应用用户信息.
+     *
+     * @param token 用户令牌
+     * @return 返回包含应用用户信息的对象数组
+     * @throws InvalidKeySpecException  无效密钥规范异常
+     * @throws NoSuchAlgorithmException 无此算法异常
+     * @throws InvalidKeyException      无效密钥异常
+     * @throws NoSuchPaddingException   无此填充异常
+     */
+    public Object[] getAppUserInfo(String token) throws InvalidKeySpecException,
+            NoSuchAlgorithmException, InvalidKeyException, NoSuchPaddingException {
         RSAPrivateKey privateKey = RSAUtil.getPrivateKey(rsaAuthingPrivateKey);
         token = RSAUtil.privateDecrypt(token, privateKey);
         DecodedJWT decode = JWT.decode(token);
@@ -450,7 +754,12 @@ public class AuthingUserDao {
         return new Object[]{appId, user};
     }
 
-    // 获取用户详细信息
+    /**
+     * 根据用户 ID 获取用户详细信息.
+     *
+     * @param userId 用户 ID
+     * @return 返回包含用户信息的 JSONObject 对象，如果未找到用户则返回 null
+     */
     public JSONObject getUserById(String userId) {
         try {
             String token = getManagementToken();
@@ -460,23 +769,34 @@ public class AuthingUserDao {
                     .asJson();
             return response.getBody().getObject().getJSONObject("data");
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return null;
         }
     }
-    
-    // 更新用户邮箱
+
+    /**
+     * 通过用户ID更新用户的电子邮件地址.
+     *
+     * @param userId 用户 ID
+     * @param email  要更新为的电子邮件地址
+     * @return 返回更新后的电子邮件地址，如果更新成功则返回新的电子邮件地址，否则返回null
+     */
     public String updateEmailById(String userId, String email) {
         try {
             User res = managementClient.users().update(userId, new UpdateUserInput().withEmail(email)).execute();
             return res.getEmail();
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return "";
         }
     }
 
-    // 删除用户
+    /**
+     * 通过用户 ID 删除用户.
+     *
+     * @param userId 用户 ID
+     * @return 如果成功删除用户则返回 true，否则返回 false
+     */
     public boolean deleteUserById(String userId) {
         try {
             String token = getManagementToken();
@@ -487,15 +807,26 @@ public class AuthingUserDao {
             int code = response.getBody().getObject().getInt("code");
             return code == 200;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return false;
         }
     }
 
-    // 用户资源和操作权限
+    /**
+     * 检查用户资源和操作权限.
+     *
+     * @param userId         用户 ID
+     * @param groupCode      用户组代码
+     * @param resourceCode   资源代码
+     * @param resourceAction 资源操作
+     * @return 如果用户权限符合要求则返回 true，否则返回 false
+     */
     public boolean checkUserPermission(String userId, String groupCode, String resourceCode, String resourceAction) {
         try {
-            PaginatedAuthorizedResources pars = managementClient.users().listAuthorizedResources(userId, groupCode).execute();
+            PaginatedAuthorizedResources pars = managementClient
+                    .users()
+                    .listAuthorizedResources(userId, groupCode)
+                    .execute();
             if (pars.getTotalCount() <= 0) {
                 return false;
             }
@@ -511,16 +842,25 @@ public class AuthingUserDao {
 
             return false;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return false;
         }
     }
 
-    // 用户资源和操作权限
+    /**
+     * 获取用户资源和操作权限.
+     *
+     * @param userId    用户 ID
+     * @param groupCode 用户组code
+     * @return 返回用户在指定用户组下的权限列表，作为一个字符串数组列表
+     */
     public ArrayList<String> getUserPermission(String userId, String groupCode) {
         ArrayList<String> pers = new ArrayList<>();
         try {
-            PaginatedAuthorizedResources pars = managementClient.users().listAuthorizedResources(userId, groupCode).execute();
+            PaginatedAuthorizedResources pars = managementClient
+                    .users()
+                    .listAuthorizedResources(userId, groupCode)
+                    .execute();
             if (pars.getTotalCount() <= 0) {
                 return pers;
             }
@@ -536,6 +876,15 @@ public class AuthingUserDao {
         }
     }
 
+    /**
+     * 发送验证码到指定账户.
+     *
+     * @param token 访问令牌
+     * @param account 目标账户
+     * @param type 验证码类型
+     * @param field 验证码字段
+     * @return 如果成功发送验证码则返回 true，否则返回 false
+     */
     public boolean sendCode(String token, String account, String type, String field) {
         try {
             Object[] appUserInfo = getAppUserInfo(token);
@@ -560,12 +909,17 @@ public class AuthingUserDao {
                     return false;
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return false;
         }
         return true;
     }
 
+    /**
+     * 获取公钥字符串.
+     *
+     * @return 返回包含公钥的字符串
+     */
     public String getPublicKey() {
         String msg = MessageCodeConfig.E00048.getMsgEn();
         try {
@@ -576,11 +930,19 @@ public class AuthingUserDao {
                 msg = resObj.toString();
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return msg;
     }
 
+    /**
+     * 使用访问令牌更新用户密码.
+     *
+     * @param token 访问令牌
+     * @param oldPwd 旧密码
+     * @param newPwd 新密码
+     * @return 如果成功更新密码则返回消息提示，否则返回 null
+     */
     public String updatePassword(String token, String oldPwd, String newPwd) {
         String msg = MessageCodeConfig.E00053.getMsgZh();
         try {
@@ -588,53 +950,88 @@ public class AuthingUserDao {
             String appId = appUserInfo[0].toString();
             User user = (User) appUserInfo[1];
 
-            String body = String.format("{\"newPassword\": \"%s\"," +
-                    "\"oldPassword\": \"%s\"," +
-                    "\"passwordEncryptType\": \"rsa\"}", newPwd, oldPwd);
+            String body = String.format("{\"newPassword\": \"%s\","
+                    + "\"oldPassword\": \"%s\","
+                    + "\"passwordEncryptType\": \"rsa\"}", newPwd, oldPwd);
             HttpResponse<JsonNode> response = authPost("/update-password", appId, user.getToken(), body);
             JSONObject resObj = response.getBody().getObject();
             msg = resObj.getInt("statusCode") != 200 ? resObj.getString("message") : Constant.SUCCESS;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return msg;
     }
 
+    /**
+     * 重置密码并验证用户邮箱.
+     *
+     * @param appId 应用程序 ID
+     * @param email 邮箱地址
+     * @param code 验证码
+     * @return 返回包含重置密码和验证邮箱操作结果的对象
+     */
     public Object resetPwdVerifyEmail(String appId, String email, String code) {
-        String body = String.format("{\"verifyMethod\": \"EMAIL_PASSCODE\"," +
-                "\"emailPassCodePayload\": " +
-                "{\"email\": \"%s\",\"passCode\": \"%s\"}}", email, code);
+        String body = String.format("{\"verifyMethod\": \"EMAIL_PASSCODE\","
+                + "\"emailPassCodePayload\": "
+                + "{\"email\": \"%s\",\"passCode\": \"%s\"}}", email, code);
         return resetPwdVerify(appId, body);
     }
 
+    /**
+     * 重置密码并验证用户手机号码.
+     *
+     * @param appId 应用程序 ID
+     * @param phone 手机号码
+     * @param code 验证码
+     * @return 返回包含重置密码和验证手机号码操作结果的对象
+     */
     public Object resetPwdVerifyPhone(String appId, String phone, String code) {
         String phoneCountryCode = getPhoneCountryCode(phone);
         phone = getPurePhone(phone);
 
-        String body = String.format("{\"verifyMethod\": \"PHONE_PASSCODE\"," +
-                        "\"phonePassCodePayload\": " +
-                        "{\"phoneNumber\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"}}",
+        String body = String.format("{\"verifyMethod\": \"PHONE_PASSCODE\","
+                        + "\"phonePassCodePayload\": "
+                        + "{\"phoneNumber\": \"%s\",\"passCode\": \"%s\",\"phoneCountryCode\": \"%s\"}}",
                 phone, code, phoneCountryCode);
         return resetPwdVerify(appId, body);
     }
 
+    /**
+     * 重置密码.
+     *
+     * @param pwdResetToken 密码重置令牌
+     * @param newPwd 新密码
+     * @return 返回重置密码操作的结果消息
+     */
     public String resetPwd(String pwdResetToken, String newPwd) {
         String msg = MessageCodeConfig.E00053.getMsgZh();
         try {
-            String body = String.format("{\"passwordResetToken\": \"%s\"," +
-                    "\"password\": \"%s\"," +
-                    "\"passwordEncryptType\": \"rsa\"}", pwdResetToken, newPwd);
+            String body = String.format("{\"passwordResetToken\": \"%s\","
+                    + "\"password\": \"%s\","
+                    + "\"passwordEncryptType\": \"rsa\"}", pwdResetToken, newPwd);
             HttpResponse<JsonNode> response = Unirest.post(authingApiHostV3 + "/reset-password")
                     .header("Content-Type", "application/json").body(body).asJson();
             JSONObject resObj = response.getBody().getObject();
             msg = resObj.getInt("statusCode") != 200 ? resObj.getString("message") : Constant.SUCCESS;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return msg;
     }
 
-    public String updateAccount(String token, String oldAccount, String oldCode, String account, String code, String type) {
+    /**
+     * 使用访问令牌更新账户信息.
+     *
+     * @param token 访问令牌
+     * @param oldAccount 旧账户信息
+     * @param oldCode 旧代码
+     * @param account 新账户信息
+     * @param code 新代码
+     * @param type 类型
+     * @return 如果成功更新账户信息则返回消息提示，否则返回 null
+     */
+    public String updateAccount(String token, String oldAccount, String oldCode,
+                                String account, String code, String type) {
         try {
             Object[] appUserInfo = getAppUserInfo(token);
             String appId = appUserInfo[0].toString();
@@ -651,12 +1048,20 @@ public class AuthingUserDao {
                     return "false";
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return e.getMessage();
         }
         return "true";
     }
 
+    /**
+     * 使用访问令牌解绑账户.
+     *
+     * @param token 访问令牌
+     * @param account 要解绑的账户信息
+     * @param type 账户类型
+     * @return 如果成功解绑账户则返回消息提示，否则返回 null
+     */
     public String unbindAccount(String token, String account, String type) {
         String resFail = "unbind fail";
         try {
@@ -665,7 +1070,9 @@ public class AuthingUserDao {
             User us = (User) appUserInfo[1];
             AuthenticationClient authentication = initUserAuthentication(appId, us);
 
-            if (StringUtils.isBlank(us.getEmail())) return "请先绑定邮箱";
+            if (StringUtils.isBlank(us.getEmail())) {
+                return "请先绑定邮箱";
+            }
             switch (type.toLowerCase()) {
                 // TODO 目前不允许解绑邮箱
                 /*case "email":
@@ -675,19 +1082,28 @@ public class AuthingUserDao {
                     break;*/
                 case "phone":
                     String phone = us.getPhone();
-                    if (!account.equals(phone)) return resFail;
+                    if (!account.equals(phone)) {
+                        return resFail;
+                    }
                     authentication.unbindPhone().execute();
                     break;
                 default:
                     return resFail;
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return e.getMessage();
         }
         return "unbind success";
     }
 
+    /**
+     * 初始化用户认证客户端.
+     *
+     * @param appId 应用程序 ID
+     * @param user 用户对象
+     * @return 返回初始化后的用户认证客户端
+     */
     public AuthenticationClient initUserAuthentication(String appId, User user) {
         // 此处需要指定用户名，不能使用缓存的client，否则有并发问题
         AuthenticationClient appClient = null;
@@ -703,6 +1119,15 @@ public class AuthingUserDao {
         return appClient;
     }
 
+    /**
+     * 绑定账户到认证客户端.
+     *
+     * @param authentication 认证客户端
+     * @param account 要绑定的账户信息
+     * @param code 验证码
+     * @param type 账户类型
+     * @return 如果成功绑定账户则返回消息提示，否则返回 null
+     */
     public String bindAccount(AuthenticationClient authentication, String account, String code, String type) {
         try {
             switch (type.toLowerCase()) {
@@ -721,6 +1146,15 @@ public class AuthingUserDao {
         return "true";
     }
 
+    /**
+     * 使用令牌绑定账户.
+     *
+     * @param token 访问令牌
+     * @param account 要绑定的账户信息
+     * @param code 验证码
+     * @param type 账户类型
+     * @return 如果成功绑定账户则返回消息提示，否则返回 null
+     */
     public String bindAccount(String token, String account, String code, String type) {
         try {
             Object[] appUserInfo = getAppUserInfo(token);
@@ -744,7 +1178,7 @@ public class AuthingUserDao {
                     return "false";
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return e.getMessage();
         }
         return "true";
@@ -775,15 +1209,15 @@ public class AuthingUserDao {
         }
     }
 
-    private void bindPhoneWithAuthingCode(String phone, String code, String appId, String token) throws Exception{
+    private void bindPhoneWithAuthingCode(String phone, String code, String appId, String token) throws Exception {
         String phoneCountryCode = getPhoneCountryCode(phone);
         phone = getPurePhone(phone);
 
-        String body = String.format("{\"phoneNumber\": \"%s\"," +
-            "\"passCode\": \"%s\"," +
-            "\"phoneCountryCode\": \"%s\"}", 
-            phone, code, phoneCountryCode);
-        
+        String body = String.format("{\"phoneNumber\": \"%s\","
+                        + "\"passCode\": \"%s\","
+                        + "\"phoneCountryCode\": \"%s\"}",
+                phone, code, phoneCountryCode);
+
         HttpResponse<JsonNode> response = authPost("/bind-phone", appId, token, body);
         JSONObject resObj = response.getBody().getObject();
         if (resObj.getInt("statusCode") != 200) {
@@ -792,18 +1226,18 @@ public class AuthingUserDao {
     }
 
     private void updatePhoneWithAuthingCode(String oldPhone, String oldCode, String newPhone, String newCode,
-            String appId, String token) throws Exception {
+                                            String appId, String token) throws Exception {
         String oldPhoneCountryCode = getPhoneCountryCode(oldPhone);
         oldPhone = getPurePhone(oldPhone);
         String newPhoneCountryCode = getPhoneCountryCode(newPhone);
         newPhone = getPurePhone(newPhone);
 
-        String body = String.format("{\"verifyMethod\": \"PHONE_PASSCODE\"," +
-            "\"phonePassCodePayload\": {" +
-            "\"oldPhoneNumber\": \"%s\",\"oldPhonePassCode\": \"%s\",\"oldPhoneCountryCode\": \"%s\"," +
-            "\"newPhoneNumber\": \"%s\",\"newPhonePassCode\": \"%s\",\"newPhoneCountryCode\": \"%s\"}}", 
-            oldPhone, oldCode, oldPhoneCountryCode, newPhone, newCode, newPhoneCountryCode);
-        
+        String body = String.format("{\"verifyMethod\": \"PHONE_PASSCODE\","
+                        + "\"phonePassCodePayload\": {"
+                        + "\"oldPhoneNumber\": \"%s\",\"oldPhonePassCode\": \"%s\",\"oldPhoneCountryCode\": \"%s\","
+                        + "\"newPhoneNumber\": \"%s\",\"newPhonePassCode\": \"%s\",\"newPhoneCountryCode\": \"%s\"}}",
+                oldPhone, oldCode, oldPhoneCountryCode, newPhone, newCode, newPhoneCountryCode);
+
         HttpResponse<JsonNode> response = authPost("/verify-update-phone-request", appId, token, body);
         JSONObject resObj = response.getBody().getObject();
         if (resObj.getInt("statusCode") != 200) {
@@ -811,7 +1245,7 @@ public class AuthingUserDao {
         }
 
         Object reqObj = resObj.get("data");
-        String reqToken = "";
+        String reqToken;
         if (reqObj instanceof JSONObject) {
             JSONObject req = (JSONObject) reqObj;
             reqToken = req.getString("updatePhoneToken");
@@ -831,6 +1265,12 @@ public class AuthingUserDao {
         }
     }
 
+    /**
+     * 获取连接列表信息.
+     *
+     * @param token 访问令牌
+     * @return 返回包含连接信息的列表，每个连接作为一个 Map 对象存储
+     */
     public List<Map<String, String>> linkConnList(String token) {
         try {
             Object[] appUserInfo = getAppUserInfo(token);
@@ -860,11 +1300,18 @@ public class AuthingUserDao {
             list.add(mapOpenatom);
             return list;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return null;
         }
     }
 
+    /**
+     * 使用两个令牌绑定账户.
+     *
+     * @param token 第一个访问令牌
+     * @param secondToken 第二个访问令牌
+     * @return 返回绑定账户操作的结果消息
+     */
     public String linkAccount(String token, String secondToken) {
         try {
             Object[] appUserInfo = getAppUserInfo(token);
@@ -874,12 +1321,19 @@ public class AuthingUserDao {
 
             authentication.linkAccount(token, secondToken).execute();
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return e.getMessage();
         }
         return "true";
     }
 
+    /**
+     * 使用令牌解除与特定平台的账户绑定.
+     *
+     * @param token 访问令牌
+     * @param platform 要解除链接的平台
+     * @return 返回解除账户链接操作的结果消息
+     */
     public String unLinkAccount(String token, String platform) {
         String msg = "解绑三方账号失败";
         String identifier;
@@ -905,13 +1359,18 @@ public class AuthingUserDao {
             Object[] appUserInfo = getAppUserInfo(token);
             User us = (User) appUserInfo[1];
 
-            if (StringUtils.isBlank(us.getEmail())) return "请先绑定邮箱";
+            if (StringUtils.isBlank(us.getEmail())) {
+                return "请先绑定邮箱";
+            }
 
             // -- temporary (解决gitee多身份源解绑问题) -- TODO
-            List<String> userIds = Stream.of(users.split(";")).collect(Collectors.toList());
+            List<String> userIds = Stream.of(users.split(";")).toList();
             if (platform.toLowerCase().equals("gitee") && userIds.contains(us.getId())) {
-                if (unLinkAccountTemp(us, identifiers, extIdpIds)) return "success";
-                else return msg;
+                if (unLinkAccountTemp(us, identifiers, extIdpIds)) {
+                    return "success";
+                } else {
+                    return msg;
+                }
             } // -- temporary -- TODO
 
             String body = String.format("{\"identifier\":\"%s\",\"extIdpId\":\"%s\"}", identifier, extIdpId);
@@ -921,14 +1380,24 @@ public class AuthingUserDao {
                     .header("Content-Type", "application/json")
                     .body(body)
                     .asJson();
-            if (response.getBody().getObject().getInt("code") == 200) msg = "success";
+            if (response.getBody().getObject().getInt("code") == 200) {
+                msg = "success";
+            }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return msg;
     }
 
     // -- temporary (解决gitee多身份源解绑问题) -- TODO
+    /**
+     * 临时解除用户与外部标识提供者之间的关联.
+     *
+     * @param us 用户对象
+     * @param identifiers 标识符
+     * @param extIdpIds 外部标识提供者 ID
+     * @return 如果成功解除关联则返回 true，否则返回 false
+     */
     public boolean unLinkAccountTemp(User us, String identifiers, String extIdpIds) {
         boolean flag = false;
 
@@ -943,14 +1412,24 @@ public class AuthingUserDao {
                         .header("Content-Type", "application/json")
                         .body(body)
                         .asJson();
-                if (response.getBody().getObject().getInt("code") == 200) flag = true;
+                if (response.getBody().getObject().getInt("code") == 200) {
+                    flag = true;
+                }
             } catch (Exception e) {
-                logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+                LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             }
         }
         return flag;
     }
 
+    /**
+     * 使用访问令牌更新用户基本信息.
+     *
+     * @param token 访问令牌
+     * @param map 包含要更新的用户基本信息的映射
+     * @return 更新用户基本信息的结果消息
+     * @throws ServerErrorException 如果更新过程中出现服务器错误
+     */
     public String updateUserBaseInfo(String token, Map<String, Object> map) throws ServerErrorException {
         String msg = "success";
         try {
@@ -972,9 +1451,12 @@ public class AuthingUserDao {
                         break;
                     case "username":
                         msg = checkUsername(appId, inputValue);
-                        if (!msg.equals("success")) return msg;
-                        if (StringUtils.isNotBlank(user.getUsername()) && !user.getUsername().startsWith("oauth2_"))
+                        if (!msg.equals("success")) {
+                            return msg;
+                        }
+                        if (StringUtils.isNotBlank(user.getUsername()) && !user.getUsername().startsWith("oauth2_")) {
                             return "用户名唯一，不可修改";
+                        }
                         updateUserInput.withUsername(inputValue);
                         break;
                     case "aigcprivacyaccepted":
@@ -987,12 +1469,15 @@ public class AuthingUserDao {
                         break;
                     case "oneidprivacyaccepted":
                         if (oneidPrivacyVersion.equals(inputValue)) {
-                            updateUserInput.withGivenName(updatePrivacyVersions(user.getGivenName(), oneidPrivacyVersion));
-                            logger.info(String.format("User %s accept privacy version %s for app version %s", user.getId(), inputValue, appVersion));
+                            updateUserInput.withGivenName(updatePrivacyVersions(user.getGivenName(),
+                                    oneidPrivacyVersion));
+                            LOGGER.info(String.format("User %s accept privacy version %s for app version %s",
+                                    user.getId(), inputValue, appVersion));
                         }
                         if ("revoked".equals(inputValue)) {
                             updateUserInput.withGivenName(updatePrivacyVersions(user.getGivenName(), "revoked"));
-                            logger.info(String.format("User %s cancel privacy consent version %s for app version %s", user.getId(), inputValue, appVersion));
+                            LOGGER.info(String.format("User %s cancel privacy consent version %s for app version %s",
+                                    user.getId(), inputValue, appVersion));
                         }
                         break;
                     default:
@@ -1002,14 +1487,20 @@ public class AuthingUserDao {
             managementClient.users().update(user.getId(), updateUserInput).execute();
             return msg;
         } catch (ServerErrorException e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             throw e;
         } catch (Exception ex) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), ex);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), ex);
             return MessageCodeConfig.E0007.getMsgZh();
         }
     }
 
+    /**
+     * 撤销用户隐私设置.
+     *
+     * @param userId 用户ID
+     * @return 如果成功撤销用户隐私设置则返回 true，否则返回 false
+     */
     public boolean revokePrivacy(String userId) {
         try {
             // get user
@@ -1017,15 +1508,25 @@ public class AuthingUserDao {
             UpdateUserInput input = new UpdateUserInput();
             input.withGivenName(updatePrivacyVersions(user.getGivenName(), "revoked"));
             User updateUser = managementClient.users().update(userId, input).execute();
-            if (updateUser == null) return false;
-            logger.info(String.format("User %s cancel privacy consent version %s for app version %s", user.getId(), oneidPrivacyVersion, appVersion));
+            if (updateUser == null) {
+                return false;
+            }
+            LOGGER.info(String.format("User %s cancel privacy consent version %s for app version %s",
+                    user.getId(), oneidPrivacyVersion, appVersion));
             return true;
         } catch (Exception e) {
-            logger.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return false;
         }
     }
 
+    /**
+     * 使用访问令牌更新用户照片.
+     *
+     * @param token 访问令牌
+     * @param file 包含新用户照片的文件
+     * @return 如果成功更新用户照片则返回 true，否则返回 false
+     */
     public boolean updatePhoto(String token, MultipartFile file) {
         InputStream inputStream = null;
         try {
@@ -1050,7 +1551,9 @@ public class AuthingUserDao {
                 return false;
             }
 
-            if (!CommonUtil.isFileContentTypeValid(file)) throw new Exception("File content type is invalid");
+            if (!CommonUtil.isFileContentTypeValid(file)) {
+                throw new Exception("File content type is invalid");
+            }
 
             String objectName = String.format("%s%s", UUID.randomUUID().toString(), extension);
 
@@ -1065,30 +1568,38 @@ public class AuthingUserDao {
             deleteObsObjectByUrl(photo);
             return true;
         } catch (Exception ex) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), ex);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), ex);
             return false;
         } finally {
             if (inputStream != null) {
                 try {
                     inputStream.close();
                 } catch (IOException e) {
-                    logger.error(e.getMessage());
+                    LOGGER.error(e.getMessage());
                 }
             }
         }
     }
 
+    /**
+     * 根据对象 URL 删除 OBS 对象.
+     *
+     * @param objectUrl 对象的 URL
+     */
     public void deleteObsObjectByUrl(String objectUrl) {
         try {
-            if (StringUtils.isBlank(objectUrl)) return;
+            if (StringUtils.isBlank(objectUrl)) {
+                return;
+            }
 
             int beginIndex = objectUrl.lastIndexOf("/");
             beginIndex = beginIndex == -1 ? 0 : beginIndex + 1;
             String objName = objectUrl.substring(beginIndex);
-            if (obsClient.doesObjectExist(datastatImgBucket, objName) && !objName.equals(defaultPhoto))
+            if (obsClient.doesObjectExist(datastatImgBucket, objName) && !objName.equals(defaultPhoto)) {
                 obsClient.deleteObject(datastatImgBucket, objName);
+            }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
     }
 
@@ -1101,23 +1612,37 @@ public class AuthingUserDao {
                     .asJson();
             return response.getBody().getObject().get("accessToken").toString();
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return "";
         }
     }
 
+    /**
+     * 检查用户名是否合规.
+     *
+     * @param appId 应用程序 ID
+     * @param userName 用户名
+     * @return 如果用户名可用则返回消息提示，否则返回错误信息
+     * @throws ServerErrorException 如果在检查过程中出现服务器错误
+     */
     public String checkUsername(String appId, String userName) throws ServerErrorException {
         String msg = "success";
-        if (StringUtils.isBlank(userName))
+        if (StringUtils.isBlank(userName)) {
             msg = "用户名不能为空";
-        else if (!userName.matches(Constant.USERNAMEREGEX))
+        } else if (!userName.matches(Constant.USERNAMEREGEX)) {
             msg = "请输入3到20个字符。只能由字母、数字或者下划线(_)组成。必须以字母开头，不能以下划线(_)结尾";
-        else if (reservedUsernames.contains(userName) || isUserExists(appId, userName, "username"))
+        } else if (reservedUsernames.contains(userName) || isUserExists(appId, userName, "username")) {
             msg = "用户名已存在";
-
+        }
         return msg;
     }
 
+    /**
+     * 获取用户可访问的应用程序列表.
+     *
+     * @param userId 用户ID
+     * @return 包含用户可访问的应用程序名称的列表
+     */
     public List<String> userAccessibleApps(String userId) {
         ArrayList<String> appIds = new ArrayList<>();
         try {
@@ -1136,13 +1661,15 @@ public class AuthingUserDao {
                 }
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return appIds;
     }
 
     private List<String> getUsernameReserved() {
-        if (StringUtils.isBlank(usernameReserved)) return null;
+        if (StringUtils.isBlank(usernameReserved)) {
+            return null;
+        }
         return Arrays.stream(usernameReserved.split(",")).map(String::trim).collect(Collectors.toList());
     }
 
@@ -1156,7 +1683,7 @@ public class AuthingUserDao {
             }
             return msg;
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return MessageCodeConfig.E00024.getMsgZh();
         }
     }
@@ -1181,11 +1708,11 @@ public class AuthingUserDao {
                 msg = MessageCodeConfig.E00052.getMsgZh();
             } else {
                 msg = (resObj.getInt("statusCode") == 200)
-                    ? resObj.get("data")
-                    : resObj.getString("message");  
+                        ? resObj.get("data")
+                        : resObj.getString("message");
             }
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
         }
         return msg;
     }
@@ -1210,23 +1737,46 @@ public class AuthingUserDao {
                 .asJson();
     }
 
+    /**
+     * 获取电话号码对应的国家/地区代码.
+     *
+     * @param phone 电话号码
+     * @return 返回电话号码对应的国家/地区代码
+     */
     public String getPhoneCountryCode(String phone) {
         String phoneCountryCode = "+86";
         String[] countryCodes = env.getProperty("sms.international.countrys.code", "").split(",");
         for (String countryCode : countryCodes) {
-            if (phone.startsWith(countryCode)) phoneCountryCode = countryCode;
+            if (phone.startsWith(countryCode)) {
+                phoneCountryCode = countryCode;
+            }
         }
         return phoneCountryCode;
     }
 
+    /**
+     * 获取电话号码的纯净形式，去除任何非数字字符.
+     *
+     * @param phone 原始电话号码
+     * @return 返回经过处理后的纯净电话号码
+     */
     public String getPurePhone(String phone) {
         String[] countryCodes = env.getProperty("sms.international.countrys.code", "").split(",");
         for (String countryCode : countryCodes) {
-            if (phone.startsWith(countryCode)) return phone.replace(countryCode, "");
+            if (phone.startsWith(countryCode)) {
+                return phone.replace(countryCode, "");
+            }
         }
         return phone;
     }
 
+    /**
+     * 创建隐私版本号.
+     *
+     * @param version 版本号
+     * @param needSlash 是否需要斜杠
+     * @return 返回创建的隐私版本号
+     */
     public String createPrivacyVersions(String version, Boolean needSlash) {
         if (!isValidCommunity(community)) {
             return "";
@@ -1241,6 +1791,13 @@ public class AuthingUserDao {
         }
     }
 
+    /**
+     * 更新隐私版本号.
+     *
+     * @param previous 先前的版本号
+     * @param version 新版本号
+     * @return 返回更新后的隐私版本号
+     */
     public String updatePrivacyVersions(String previous, String version) {
         if (!isValidCommunity(community)) {
             return "";
@@ -1265,15 +1822,26 @@ public class AuthingUserDao {
                 privacys.put(community, version);
                 return JSON.toJSONString(privacys);
             } catch (Exception e) {
-                logger.error(e.getMessage());
+                LOGGER.error(e.getMessage());
                 return createPrivacyVersions(version, false);
             }
         }
     }
 
+    /**
+     * 根据社区获取包含特定隐私版本号的隐私设置.
+     *
+     * @param privacyVersions 隐私版本号
+     * @param com 社区名称
+     * @return 返回包含特定隐私版本号的隐私设置
+     */
     public String getPrivacyVersionWithCommunity(String privacyVersions, String com) {
-        if (privacyVersions == null || !privacyVersions.contains(":")) return "";
-        if (com == null) com = community;
+        if (privacyVersions == null || !privacyVersions.contains(":")) {
+            return "";
+        }
+        if (com == null) {
+            com = community;
+        }
 
         try {
             HashMap<String, String> privacys = JSON.parseObject(privacyVersions, HashMap.class);
@@ -1284,7 +1852,7 @@ public class AuthingUserDao {
                 return privacyAccept;
             }
         } catch (Exception e) {
-            logger.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return "";
         }
     }
@@ -1298,13 +1866,19 @@ public class AuthingUserDao {
         return false;
     }
 
+    /**
+     * 将用户踢出系统.
+     *
+     * @param userId 用户ID
+     * @return 如果成功将用户踢出系统则返回 true，否则返回 false
+     */
     public boolean kickUser(String userId) {
         try {
             List<String> userIds = new ArrayList<>();
             userIds.add(userId);
             return managementClient.users().kick(userIds).execute();
         } catch (Exception e) {
-            logger.error(MessageCodeConfig.E00048.getMsgEn(), e);
+            LOGGER.error(MessageCodeConfig.E00048.getMsgEn(), e);
             return false;
         }
     }
